<resources>
    <string name="app_name">이따만나</string>

    <!-- 홈 화면 약속 리스트 아이템 화면 -->
    <string name="start_item_promisePlace">장소</string>
    <string name="start_item_promiseTime">일시</string>
    <string name="start_item_notification_permission">알림 권한을 설정해주세요.</string>
    <string name="start_item_empty">오늘은 약속이 없어요!</string>

    <!-- 약속 추가 화면 -->
    <string name="promiseSetting_promiseTitle">제목을 입력하세요</string>
    <string name="promiseSetting_promiseDate">날짜&#160;&#160;⃰</string>
    <string name="promiseSetting_promiseDate_placeholder">다같이 만날 날짜를 입력하세요.</string>
    <string name="promiseSetting_promiseTime">시간&#160;&#160;⃰</string>
    <string name="promiseSetting_promiseTime_placeholder">다같이 만날 시간을 입력하세요.</string>
    <string name="promiseSetting_promisePlace">장소&#160;&#160;⃰</string>
    <string name="promiseSetting_promisePlace_placeholder">다같이 만날 장소를 입력하세요.</string>
    <string name="promiseSetting_promiseMember">멤버</string>
    <string name="promiseSetting_promiseMember_placeholder">함께할 사람을 초대하세요.</string>
    <string name="promiseSetting_completion">완료</string>
    <string name="promiseSetting_fail">저장에 실패했습니다.</string>
    <string name="promiseSetting_empty">약속 정보를 모두 채워주세요.</string>
    <string name="promiseSetting_beforeTime">현재보다 이후의 시간으로 설정해주세요.</string>

    <!-- 약속 추가 다이얼로그 -->
    <string name="date_format">%d/%02d/%02d</string>
    <string name="time_format">%02d:%02d</string>
    <string name="address_format">%s : (%d, %d)</string>
    <string name="title_timepicker">약속 시간을 설정하세요.</string>
    <string name="title_datepicker">약속 날짜를 설정하세요.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="search_address">주소 검색</string>
    <string name="select_time">시간 선택</string>
    <string name="select_date">날짜 선택</string>
    <string name="search_address_hint">검색할 주소를 입력하세요.</string>

    <!-- 약속 멤버 추가 화면 -->
    <string name="invite_member">초대할 멤버</string>
    <string name="delete_member">멤버 삭제</string>
    <string name="user_profile_image">사용자 프로필 이미지</string>
    <string name="confirm">완료</string>

    <!-- 회원가입 화면 -->
    <string name="signUp_inputError">특수문자, 공백 제외 8자 이하를 입력해주세요.</string>
    <string name="signUp_title">환영합니다!</string>
    <string name="signUp_nameDescription">이름을 입력해주세요.</string>
    <string name="signUp_signUpRequest">시작하기</string>
    <string name="signUp_signUpError">회원가입을 실패했습니다.</string>
    <string name="signUp_networkError">네트워크 연결을 확인해주세요.</string>

    <!-- 약속 캘린더 화면 -->
    <string name="promiseCalendar_header">약속</string>
    <string name="promiseCalendar_myInfo">내정보</string>
    <string name="promiseCalendar_list">목록</string>
    <string name="promiseCalendar_createPromise">약속 생성</string>
    <string name="promiseCalendar_promiseCard_sampleTitle">부스터즈 모각코</string>
    <string name="promiseCalendar_promiseCard_sampleDestination">투썸플레이스 영등포역점</string>
    <string name="promiseCalendar_promiseCard_sampleTime">17:00</string>

    <!-- 친구 리스트 화면 -->
    <string name="friend_tabFriend">친구</string>
    <string name="friend_tabSearch">검색</string>
    <string name="friend_searchQueryHint">멤버 이름 / 멤버 코드(#000000)</string>
    <string name="friend_userCodeFormat">#%s</string>
    <string name="friend_information_image">친구 초대 안내 이미지</string>
    <string name="friend_empty_info">새로운 친구를 초대해보세요.</string>

    <!-- 약속 상세 화면 -->
    <string name="promiseDetail_location">장소</string>
    <string name="promiseDetail_date">일시</string>
    <string name="promiseDetail_edit">수정</string>
    <string name="promiseDetail_delete">삭제</string>
    <string name="promiseDetail_date_format">%s, %s</string>
    <string name="promiseDetail_member">약속 멤버</string>
    <string name="promiseDetail_delete_fail">삭제에 실패했습니다.</string>
    <string name="promiseDetail_delete_ask">삭제하시겠습니까?</string>
    <string name="promiseDetail_dialog_yes">YES</string>
    <string name="promiseDetail_dialog_no">NO</string>
    <string name="promiseDetail_destination">목적지</string>
    <string name="promiseDetail_arrive">도착</string>
    <string name="promiseDetail_memberSelect">멤버 선택</string>
    <string name="promiseDetail_memberLocation_null">위치를 찾을 수 없습니다.</string>
    <string name="promiseDetail_overview">한 눈에 보기</string>
    <string name="promiseDetail_location_sharing_permission">위치 공유</string>
    <string name="promiseDetail_myLocation">내 위치</string>
    <string name="promiseDetail_require_location_permission">위치 권한이 필요합니다.</string>
    <string name="promiseDetail_promise_load_exception">약속이 삭제되었습니다.</string>

    <!-- LocationService 알림 -->
    <string name="locationService_notification_title">위치 공유중입니다.</string>
    <string name="locationService_notification_channel_name">위치 공유</string>
    <string name="locationService_notification_channel_description">위치 공유가 동작중일때 표시된다.</string>

    <!-- 알림 -->
    <string name="notification_add">[%s] 새로운 약속이 추가되었습니다.</string>
    <string name="notification_edit">[%s] 약속이 수정되었습니다.</string>
    <string name="notification_delete">[%s] 약속이 삭제되었습니다.</string>
    <string name="notification_request">약속시간이 다가옵니다!</string>

    <!-- LoadingDialog 안내문 -->
    <string name="dialogLoading_default_message">화면을 불러오는 중입니다.\n잠시만 기다려주세요.</string>
    <string name="dialogLoading_promiseSetting_message">약속을 생성하고 있습니다.\n잠시만 기다려주세요.</string>
    <string name="dialogLoading_signUp_message">사용자 등록 중입니다.\n잠시만 기다려주세요.</string>

</resources>