<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="androidx.lifecycle.MutableLiveData" />

        <variable
            name="enterName"
            type="MutableLiveData&lt;String&gt;" />

        <variable
            name="nameInputUiState"
            type="com.boosters.promise.ui.signup.model.NameInputUiState" />

        <variable
            name="isLoading"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/default_horizontal_padding"
        tools:context=".ui.signup.SignUpActivity">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="@{isLoading ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_sighUp_titleTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/Promise.TextAppearance.BigBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp_title"
            app:layout_constraintBottom_toTopOf="@id/guideline_sighUp_nameDescriptionTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_sighUp_titleTop"
            app:layout_constraintVertical_bias="0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_sighUp_nameDescriptionTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_signUp_nameDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp_nameDescription"
            app:layout_constraintBottom_toTopOf="@id/textInputLayout_signUp_enterName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_sighUp_nameDescriptionTop"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_signUp_enterName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="6"
            app:error='@{nameInputUiState.isNameValidationFail ? context.getString(nameInputUiState.nameValidationErrorTextResId) : ""}'
            app:layout_constraintBottom_toTopOf="@id/button_signUp_SignUpRequest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_signUp_nameDescription">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_signUp_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="6"
                android:maxLines="1"
                android:text="@={enterName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_signUp_SignUpRequest"
            style="@style/Promise.Button.SquareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{!isLoading}"
            android:text="@string/signUp_signUpRequest"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_signUp_enterName" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>